# FireworkDance

./: .gitignore  CMakeLists.txt  FireworkDance.html  README.md  build.bat  build.sh  generate_gif.bat  test.html
.github/workflows/: build.yml  cmake-win-msys2.yml  main_ci.yml  release.yml
src/: FireworkDance.cpp
